PyMaker/datas/object2/RawHTML/i18201/Python_DOC_referPages.how-to-know-if-a-unicode-identifier-is-valid.txt
<div class="post-text" itemprop="text">
<p>Here is a sample scenario - </p>
<pre><code>&gt;&gt;&gt; এক = 1
&gt;&gt;&gt; ১ = 1
  File "&lt;stdin&gt;", line 1
    ১ = 1
      ^
SyntaxError: invalid character in identifier
</code></pre>
<p>I'm running this from default <code>python3</code> interpreter. Why do the first unicode string work as an identifier and not the second one?</p>
</div>
<div class="post-text" itemprop="text">
<p>Valid identifiers are explained in the Python 3 documentation: <a href="http://docs.python.org/3/reference/lexical_analysis.html#identifiers" rel="nofollow">Lexical analysis - Identifiers and keywords</a>.</p>
<p>The exact details can found in <a href="http://www.python.org/dev/peps/pep-3131/" rel="nofollow">PEP 3131</a>.</p>
</div>
<span class="comment-copy"><a href="http://www.python.org/dev/peps/pep-3131" rel="nofollow noreferrer">python.org/dev/peps/pep-3131</a></span>
<span class="comment-copy">১ is a digit. Identifiers can't start with digits.</span>
<span class="comment-copy">@LennartRegebro Duh! :| This was a silly question to start with. :|</span>
<span class="comment-copy">@Bibhas use str.isdigit(). ('এক').isdigit() return False and ('১').isdigit() return True</span>
<span class="comment-copy">@Bibhas I searched for in in gnome.character-map. :-)</span>
